Made DeveloperUI object oriented.